2007-01-16  Titus Brown  <t@localhost.localdomain>

	* Fixed twill tests (!?)

2007-01-14  Titus Brown  <t@localhost.localdomain>

	* global_form is now form[0] if present.

	* Deprecated allow_parse_errors config option; isn't needed for
	  latest mechanize.

	* Updated mechanize and ClientForm to latest svn; patched to pass
	  twill tests.  Preserved originals in mechanize/_html.py.jjl,
	  ClientForm.py.jjl.

2007-01-09  Titus Brown  <t@localhost.localdomain>

	* Added complete_fv to formvalue completion patch.

	* Added formvalue completion patch (Seo Sanghyeon).

2006-11-29  Titus Brown  <t@localhost.localdomain>

	* Fixed test-form.twill to match new output format.

	* Patched __init__.py to remove UNIX-specific '/' from the
	  sys.path insert statement.  (Ramon Felciano)

	* Patched wsgi_intercept: REMOTE_ADDRESS ==> REMOTE_ADDR.

2006-11-01  Titus Brown  <t@localhost.localdomain>

	* formvalue now returns an informative error message when
	  a file upload field is touched (Matthew Singer)

	* Added Andy Chamber's formfill patch.

	* Added tests for Andy Chambers's formfill patch.

	* Fixed bug in mechanize/_html.py links parsing.

2006-10-26  Titus Brown  <t@localhost.localdomain>

	* Added TWILL_TEST_PORT in for running tests on something other
	  than port 8080.

2006-10-19  Titus Brown  <t@localhost.localdomain>

	* Updated mechanize & ClientForm to svn latest.

2006-10-17  Titus Brown  <t@localhost.localdomain>

	* Fix to BS parsing problem (?)

2006-10-16  Titus Brown  <t@localhost.localdomain>

	* Changed assertions in test-broken-html.py to refer to tidy.

	* Put a pkg_resources.require('dnspython>=1.4') in for test-dns.py

2006-10-15  Titus Brown  <t@vallista.idyll.org>

	* Switched over to using pkg_resources.require for quixote version
	  require/check.

	* Fixed DNS tests with fake idyll.org hosts (Alex Martelli)

2006-09-20  Titus Brown  <t@issola.caltech.edu>

	* Bumped version to 0.9.
