@@ -1,3 +1,8 @@
+2007-01-23  Titus Brown  <t@localhost.localdomain>
+
+	* Made twill tests work under Windows+cygwin by switching to
+	  subprocess.
+
 2007-01-16  Titus Brown  <t@localhost.localdomain>
 
 	* Fixed twill tests (!?)
